<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.DataSettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/dialog_toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/dialog_meds_data_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_meds_data_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dialog_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar_layout"
        app:layout_constraintWidth_max="480dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_meds_name_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/dialog_meds_daily_amount_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meds_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_form_meds_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/meds_name_search_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_search_24"
            android:background="@color/transparent"
            android:contentDescription="@string/meds_name_search_btn_text"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="@id/dialog_meds_name_layout"
            app:layout_constraintEnd_toEndOf="@id/dialog_meds_name_layout"
            app:layout_constraintBottom_toTopOf="@+id/dialog_meds_daily_amount_layout"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_meds_daily_amount_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialog_meds_name_layout"
            app:layout_constraintBottom_toTopOf="@id/dialog_meds_detail_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meds_daily_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/dialog_add_form_meds_daily_amount" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_meds_detail_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/dialog_meds_date_layout"
            app:layout_constraintTop_toBottomOf="@id/dialog_meds_daily_amount_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meds_detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_add_form_meds_detail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_meds_date_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/dialog_meds_detail_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meds_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/dialog_add_form_meds_date"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/dialog_meds_timer_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_meds_date_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_meds_timer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/dialog_meds_timer_add_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_meds_timer_add_btn"
            style="@style/customAddBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:text="@string/dialog_add_form_meds_timer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_meds_timer_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_meds_data_layout"
        app:layout_constraintStart_toStartOf="@id/dialog_meds_data_layout"
        app:layout_constraintEnd_toEndOf="@id/dialog_meds_data_layout">

        <Button
            android:id="@+id/submit"
            style="@style/customSubmitBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/dialog_add_form_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel"
            style="@style/customSubmitBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/dialog_add_form_cancel"
            app:layout_constraintEnd_toStartOf="@id/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
