<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_login_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/main_icon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toTopOf="@id/main_id_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_id_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintBottom_toTopOf="@id/main_password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_icon_image">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_id_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_main_id"
                    android:inputType="text"
                    android:minWidth="320dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintBottom_toTopOf="@id/main_login_plain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_id_layout"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/main_pw_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_main_password"
                    android:inputType="textPassword"
                    android:minWidth="320dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/main_login_plain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:minWidth="250dp"
                android:text="@string/main_login_plain_text"
                app:layout_constraintBottom_toTopOf="@id/main_login_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_password_layout" />

            <Button
                android:id="@+id/main_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="250dp"
                android:text="@string/main_login_google_text"
                app:layout_constraintBottom_toTopOf="@id/main_register_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_login_plain" />

            <Button
                android:id="@+id/main_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="250dp"
                android:text="@string/main_register_text"
                app:layout_constraintBottom_toTopOf="@id/reset_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_login_google" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textColor="#787878"
                android:textStyle="italic"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/main_register_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ProgressBar
                android:id="@+id/loadingBar_Plain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/reset_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/loadingBar_Google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/main_login_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
