<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.DataSettingDialog">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/dialog_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_button_layout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_meds_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@id/dialog_meds_detail_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="360dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meds_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_add_form_meds_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_meds_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@id/dialog_meds_date_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_meds_name_layout"
                app:layout_constraintWidth_max="360dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meds_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_add_form_meds_detail" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_meds_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_meds_detail_layout"
                app:layout_constraintWidth_max="360dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meds_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/dialog_add_form_meds_date"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_500"
        app:layout_constraintTop_toBottomOf="@id/dialog_main_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/submit"
            style="@style/customButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:enabled="false"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/dialog_add_form_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/cancel"
            style="@style/customButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/dialog_add_form_cancel"
            app:layout_constraintEnd_toStartOf="@id/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
